commit 9 14-6-2021
- make username at users table nullable .
- add some documentation .
- make error message string .
